# echosub

./: .gitignore  README.md  app.py  pyproject.toml  pytest.ini  requirements.md
src/model/: video.py
src/model/tests/: video_test.py
src/services/: extract_audio_service.py  generate_subtitle_service.py  load_video_file_service.py  transcrib_audio_service.py
src/services/tests/: extract_audio_test.py  load_video_file_test.py
src/ui/: ui.py
src/ui/themes/: lavender.json
