[project]
name = "echosub"
version = "0.1.0"
description = ""
authors = [
    {name = "José Rocha",email = "joserochadev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "moviepy (>=2.1.2,<3.0.0)",
    "customtkinter (>=5.2.2,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
